deployments/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: forecastle
    group: com.stakater.platform
    provider: stakater
    version: "v1.0.42"
    chart: "forecastle-v1.0.42"
    release: "forecastle"
    heritage: "Tiller"
  name: forecastle
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: forecastle
      group: com.stakater.platform
      provider: stakater
  template:
    metadata:
      labels:
        app: forecastle
        group: com.stakater.platform
        provider: stakater
    spec:
      automountServiceAccountToken:  true
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: "812290479310.dkr.ecr.us-west-2.amazonaws.com/stakater/forecastle:dev"
        name: forecastle
        volumeMounts:
        - name: forecastle-config
          mountPath: /etc/forecastle
      volumes:
      - name: forecastle-config
        configMap:
          name: forecastle
      serviceAccountName: argus-5kmy4q5s5nguuywvdosadmow
