deployments/kubernetes/manifests.yaml
---
# Source: forecastle/templates/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    configmap.fabric8.io/update-on-change: "keycloak-proxy"
  labels:
    app: forecastle
    group: com.stakater.platform
    provider: stakater
    version: "0.0.5"
    chart: "forecastle-0.0.5"
    release: "RELEASE-NAME"
    heritage: "Tiller"
  name: forecastle
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: forecastle
      group: com.stakater.platform
      provider: stakater
  template:
    metadata:
      labels:
        app: forecastle
        group: com.stakater.platform
        provider: stakater
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: "stakater/forecastle:0.0.5"
        name: forecastle
        volumeMounts:
        - name: forecastle-config
          mountPath: /etc/cp-config      
      volumes:      
      - name: forecastle-config
        configMap: 
          name: forecastle
      serviceAccountName: forecastle      

---
# Source: forecastle/templates/service.yaml
---
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      fabric8.io/ingress.path: /
      fabric8.io/ingress.annotations: |-
        ingress.kubernetes.io/rewrite-target: /
        ingress.kubernetes.io/force-ssl-redirect: false
        kubernetes.io/ingress.class: internal-ingress
    labels:
      app: forecastle
      group: com.stakater.platform
      provider: stakater
      version: "0.0.5"
      chart: "forecastle-0.0.5"
      release: "RELEASE-NAME"
      heritage: "Tiller"
      expose: "true"
    name: forecastle
  spec:
    ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
    selector:
      app: forecastle
      group: com.stakater.platform
      provider: stakater
